06-isp/denoising.test/log.txt
Traceback (most recent call last):
  File "train.py", line 10, in <module>
    from dataset import Dataset
  File "/root/tf-tutorials/06-isp/denoising.test/dataset.py", line 51
    def augmentation(self, img):
                               ^
IndentationError: unindent does not match any outer indentation level
